fixed linewrap of dates in browse navigation
git-svn-id: http://svn.topazproject.org/svn/head@2417 48088309-b40f-0410-b149-b14953253675

--- a/plosone/webapp/src/main/webapp/css/pone_iepc.css
+++ b/plosone/webapp/src/main/webapp/css/pone_iepc.css
@@ -69,6 +69,8 @@ html>body #home { height: auto }
 * html ul#links a:visited { display: inline; padding: 1px 0 3px 18px;}
 
 * html div#browseNav { width: 220px;}
+* html #browseNav li { float: none; }
+* html #browseNav li li { float: left; }
 
 /* IE 7 hax */
 *:first-child+html ul#tabsContainer 	{ }
