--- a/plosone/webapp/src/main/webapp/css/pone_screen.css
+++ b/plosone/webapp/src/main/webapp/css/pone_screen.css
@@ -502,17 +502,18 @@ div.source span		{ color: #999; padding: 4px 0 4px 14px; }
 /* ------ Browse Styles ----*/
 div.browse h1 		{ margin-bottom: 20px; margin-right: 140px;}
 div.browse #search-results { margin-left: 0; margin-right: 140px; padding-left: 20px; border-left: 240px solid #eee;}
-div#browseNav 		{ float: left; position: relative; z-index: 70; width: 240px;  padding: 0; background: #eee; margin-bottom: 20px;}
-#browseNav li 		{ font-size: .9em; font-weight: bold; padding: 0;margin: 0;text-indent: 0;}
+div#browseNav 		{ float: left; position: relative; z-index: 70; width: 240px;  padding: 0; background: #eee; margin-bottom: 20px; padding-bottom: 20px;}
+#browseNav li 		{ font-size: .9em; font-weight: bold; padding: 0;margin: 0; }
+#browseNav li input { position: relative; }
 #browseNav ul		{ padding: 0; }
 #browseNav ul li	{ background: url(../images/pone_browsenav_li.gif) no-repeat 0 8px; list-style-type: none; padding-left: 10px; }
-
+div.browse div#search-results	{ z-index: 69; position: relative;}
 
 /*--- Browse By Publication Date ----*/
-#browseNav ol 		{ list-style-type: none; padding: 0 15px; margin: 0; float: left;clear: left; width: auto;}
+#browseNav ol 		{ list-style-type: none; padding: 0 6px 0 15px; margin: 0; float: left;clear: left; width: auto;margin-top: 5px;}
 #browseNav li li 	{ float: left;text-align:center; margin: 0; }
-#browseNav li ol	{ display: block; clear: left; }
-#browseNav li		{ clear: left;}
+#browseNav li ol	{ display: block; clear: left; padding: 0; }
+#browseNav li		{ clear: left; float: left;}
 #browseNav li li	{ clear: none; }
 
 #browseNav ol a:link,
@@ -536,4 +537,4 @@ li.current { list-style-type: none!important; background: url(../images/pone_li_
 ol li.current { background: none!important; font-size: inherit;}
 ol li.current * { color: #000; text-decoration: none; background: none; cursor: default;}
 
-#bannerRight { float: right; }
+#bannerRight { float: right; margin-bottom: 20px;}
